--- a/requirements.txt
+++ b/requirements.txt
@@ -70,7 +70,7 @@ pyzmq==20.0.0
 qtconsole==5.0.1
 QtPy==1.9.0
 requests==2.25.0
-scikit-learn==1.3.1
+scikit-learn
 scipy==1.5.4
 seaborn==0.11.0
 Send2Trash==1.5.0
